syntax = "proto3";

package post_service;

service PostService {
    rpc CreatePost(CreatePostRequest) returns (Post);
    rpc AddPostMedia(AddPostMediaRequest) returns (Media);
    rpc GetPostById(GetPostByIdRequest) returns (GetPostByIdResponse);
    rpc GetAllPosts(GetAllPostsRequest) returns (GetAllPostsResponse);
    rpc RatePost(LikePostRequest) returns (Like);
    rpc CommentPost(CommentPostRequest) returns (Comment);
}

message Post {
    string id = 1;
    string text = 2;
    string channelId = 3;
    string createdAt = 4;
    string updatedAt = 5;
    repeated Media postMedias = 6;
    repeated Comment postComments = 7;
    repeated Like postLikes = 8;
}

message Media {
    string id = 1;
    string url = 2;
    string postId = 3;
    string createdAt = 4;
    string updatedAt = 5;
}

message Like {
    string id = 1;
    string postId = 2;
    string parentId = 3;
    string reaction = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message Comment {
    string id = 1;
    string postId = 2;
    string parentId = 3;
    string text = 4;
    string createdAt = 5;
    string updatedAt = 6;
}

message Boolean {
    bool bool = 1;
}

message CreatePostRequest {
    string text = 1;
    string channelId = 2;
}

message AddPostMediaRequest{
    string url = 1;
    string postId = 2;
}

message DeletePostRequest {
    string id = 1;
    string channelId = 2;
}

message GetPostByIdRequest {
    string id = 1;
}

message GetPostByIdResponse {
    string id = 1;
    string text = 2;
    string channelId = 3;
    repeated Comment postComments = 4;
    repeated Like postLikes = 5;
    repeated Media postMedias = 6;
}

message GetAllPostsRequest {
    string channelId = 1;
}

message GetAllPostsResponse {
    repeated Post posts = 1;
}

message LikePostRequest {
    string postId = 1;
    string parentId = 2;
    string rate = 3;
}

message CommentPostRequest {
    string postId = 1;
    string parentId = 2;
    string text = 3;
}